--- a/_posts/2017-11-06-ss-config.md
+++ b/_posts/2017-11-06-ss-config.md
@@ -2,7 +2,7 @@
 layout:      post
 title:       SS Config Note
 category:    SS
-description: Command to Config SS
+description: Command to Config SS.
 ---
 
 Restart SS server command:
