--- a/_posts/2018-05-13-wiremock-101.md
+++ b/_posts/2018-05-13-wiremock-101.md
@@ -2,7 +2,7 @@
 layout:      post
 title:       WireMock 101
 category:    WireMock
-description: The basic usage of WireMock.
+description: Basic usage of WireMock.
 ---
 
 WireMock is a simulator for HTTP-based APIs.  
