--- a/_posts/2018-05-13-wiremock-101.md
+++ b/_posts/2018-05-13-wiremock-101.md
@@ -1,7 +1,7 @@
 ---
 layout:      post
 title:       WireMock 101
-category:    WireMock
+category:    REST
 description: Basic usage of WireMock.
 ---
 
