Add Post Update SS
SS python package update.

--- a/_posts/2017-11-06-ss-config.md
+++ b/_posts/2017-11-06-ss-config.md
@@ -1,7 +1,7 @@
 ---
 layout:      post
 title:       SS Config Note
-category:    SS
+category:    Shadowsocks
 description: Command to Config SS.
 ---
 
