--- a/_posts/2019-11-20-ai-ml-dl.md
+++ b/_posts/2019-11-20-ai-ml-dl.md
@@ -6,3 +6,5 @@ description: AI - Machine Learning - Deep Learning.
 ---
 
 [![]({{site.baseurl}}/assets/img/ai-ml-dl.png)]({{site.baseurl}}/assets/img/ai-ml-dl.png)  
+
+[From NVIDIA Blog](https://blogs.nvidia.com/blog/2016/07/29/whats-difference-artificial-intelligence-machine-learning-deep-learning-ai/)
